# Whatsapp-Agent

./: .env.example  .gitignore  pyproject.toml  requirements.txt  start_services.sh
src/: main.py
src/agents/document_parser/: graph.py  nodes.py  prompts.py  state.py
src/agents/document_parser/tools/: __init__.py  docs.py  easy_ocr.py  excel.py  image.py  pdf.py
src/agents/whatsapp/: edges.py  graph.py  nodes.py  prompts.py  state.py  tools.py
src/agents/whatsapp_rag/: embeddings.py  graph.py  nodes.py  prompts.py  qdrant_client.py  settings.py  state.py  tools.py
src/core/: db_query.py  embeddings.py  logging_config.py  prompts.py  settings.py
src/graph/: edges.py  graph.py  nodes.py  state.py  tools.py
src/graph/utils/: db.py  helpers.py  ms_sql_manager.py  qdrant_db.py
src/schedular/: schedular.py
src/utils/: db.py  file_handler.py  helpers.py  ms_sql_manager.py
